--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
+
   </head>
   <body>
     <main>
@@ -45,10 +46,10 @@
             <div class="left-side">
               <span class="balance-name font gray">Total
                 this month</span>
-              <span class="balance-value font black change-size">$478.33</span>
+              <span class="balance-value font black bigger">$478.33</span>
               </div>
               <div class="right-side change-direction">
-                <span class="balance-value font black change-size">+2.4%</span>
+                <span class="balance-value font black smaller">+2.4%</span>
                 <span class="balance-name font gray">from last month</span>
               </div>
           </div>
@@ -58,6 +59,8 @@
 
      mon tue wed thu fri sat sun 
 
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
+
+    
   </body>
 </html>
