--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
     
         </div>
         <div class="second card">
-          <h1>Spending - Last 7 days</h1>
+          <h1 class="font brown">Spending - Last 7 days</h1>
           <div class="chart"></div>
           <hr>
           <div class="summary">
             <div class="left-side">
               <span class="balance-name font gray">Total
                 this month</span>
-              <span class="balance-value font black bigger">$478.33</span>
+              <span class="balance-value font brown bigger">$478.33</span>
               </div>
               <div class="right-side change-direction">
-                <span class="balance-value font black smaller">+2.4%</span>
+                <span class="balance-value font brown smaller">+2.4%</span>
                 <span class="balance-name font gray">from last month</span>
               </div>
           </div>
