--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="main-container">
         <div class="first card">
           <div class="left-side">
-          <span class="balance-name font">My balance</span>
+          <span class="balance-name font space">My balance</span>
           <span class="balance-value font">$921.48</span>
           </div>
           <div class="right-side">
